# Surprise.exe

./: CMakeLists.txt  add_hint.py  encoder.py  main.cpp
.github/workflows/: build_and_encode_surprise-exe.yml
builds/: decoder.py  hint.txt
